   - Upload File (upload file from local workstation to remote node) 
   - Manage Files (move, rename and delete files on remote node)
- Management console:
   - "Commands" box on node overview page made configurable
   - Object tools can have icons
   - "Last value" type gauge can show non-numeric values
   - "Trusted Nodes" property page shown for condition objects
- Android Console:
   - Added option in preference to show/hide legend in graphs
- Fixed issues: #586, #597, #598, #605, #606, #607


*
* 1.2.14
*

- STP (Spanning Tree Protocol) information used for topology discovery
- Information source for interface peers (CDP, STP, etc.) shown in console
- New NXSL function inList
- New NXSL operator abort
- New methods in NXSL class Node: enableAgent, enableConfigurationPoll,
  enableIcmp, enableSnmp, enableStatusPoll, enableTopologyPoll
- Fixed server crash if SNMP proxy unavailable
- New MIBs: AIRESPACE-REF-MIB, AIRESPACE-SWITCHING-MIB, 
     AIRESPACE-WIRELESS-MIB, FROGFOOT-RESOURCES-MIB, MIKROTIK-MIB
- SMS driver for websms.ru service
- Macro expansion supported in pattern in agent parameters File.Size and File.Count
- Attribute "instance" added to NXSL class "DCI"
- Added "L" extension to DCI custom schedules
- Traps from unmanaged nodes ignored
- Fixed repeated threshold violation events after server restart
- Added driver for Mikrotik routers
- Added driver for Ubiquity Networks wireless access points
- Added driver for Cisco Wireless Controller 4400 (former Airespace)
- Wireless controller and access point support improved
- Log monitoring subagent sends Windows event source, severity, and code
  to the server as part of NetXMS event
- DB/2 driver and monitoring subagent included into Windows installation package
- Management console:
   - DCI values can be shown on network map links
   - DCI value can be shown on map as immage, that checnges depending on DCI value
   - DCI value can be shown on map as a text