@@ -2,14 +2,14 @@ Manifest-Version: 1.0
 Bundle-ManifestVersion: 2
 Bundle-Name: NXMC Network Maps Plug-in
 Bundle-SymbolicName: org.netxms.ui.eclipse.networkmaps;singleton:=true
-Bundle-Version: 1.2.14
+Bundle-Version: 1.2.15
 Bundle-Activator: org.netxms.ui.eclipse.networkmaps.Activator
 Bundle-Vendor: netxms.org
 Require-Bundle: org.eclipse.ui;bundle-version="3.7.0",
  org.eclipse.core.runtime;bundle-version="3.7.0",
- org.netxms.ui.eclipse.console;bundle-version="1.2.14",
- org.netxms.ui.eclipse.objectbrowser;bundle-version="1.2.12",
- org.netxms.ui.eclipse.imagelibrary;bundle-version="1.2.10",
+ org.netxms.ui.eclipse.console;bundle-version="1.2.15",
+ org.netxms.ui.eclipse.objectbrowser;bundle-version="1.2.15",
+ org.netxms.ui.eclipse.imagelibrary;bundle-version="1.2.14",
  org.netxms.ui.eclipse.osm;bundle-version="1.2.7",
  org.netxms.ui.eclipse.charts;bundle-version="1.2.11",
  org.eclipse.draw2d;bundle-version="3.9.0",
@@ -17,7 +17,7 @@ Require-Bundle: org.eclipse.ui;bundle-version="3.7.0",
  org.netxms.gef4.zest.core;bundle-version="2.0.0",
  org.netxms.gef4.zest.jface;bundle-version="2.0.0",
  org.netxms.gef4.zest.layouts;bundle-version="2.0.0",
- org.netxms.ui.eclipse.objectview;bundle-version="1.2.14",
+ org.netxms.ui.eclipse.objectview;bundle-version="1.2.15",
  org.netxms.ui.eclipse.datacollection;bundle-version="1.2.13"
 Bundle-RequiredExecutionEnvironment: JavaSE-1.6
 Bundle-ActivationPolicy: lazy
