@@ -18,6 +18,7 @@
    - Object tools can have icons
    - "Last value" type gauge can show non-numeric values
    - "Trusted Nodes" property page shown for condition objects
+   - Network map content can be copied to clipboard
 - Android Console:
    - Added option in preference to show/hide legend in graphs
 - Fixed issues: #586, #597, #598, #605, #606, #607
